--- a/index.html
+++ b/index.html
@@ -359,13 +359,37 @@
         </div>
       </section>
 
-      <div class="backdrop is-hidden" data-modal>
+      <div class="backdrop" data-modal>
         <div class="modal">
           <button type="button" data-modal-close class="modal-close">
             <svg class="close-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
+          <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+          <form action="#" class="modal-form">
+            <div class="modal-field">
+              <label for="name">Имя</label>
+              <input class="modal-input" type="text" name="name" id="name" autofocus />
+            </div>
+            <div class="modal-field">
+              <label for="tel">Телефон</label>
+              <input class="modal-input" type="text" name="tel" id="tel" autofocus />
+            </div>
+            <div class="modal-field">
+              <label for="mail">Почта</label>
+              <input class="modal-input" type="text" name="mail" id="mail" autofocus />
+            </div>
+            <div class="modal-field">
+              <label for="comment">Комментарий</label>
+              <input class="modal-input" type="text" name="comment" id="comment" autofocus />
+            </div>
+            <div class="modal-field">
+              <input class="modal-input" type="checkbox" name="agree" id="agree" autofocus />
+              <label for="agree">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+            </div>
+            <button type="submit">Отправить</button>
+          </form>
         </div>
       </div>
     </main>
@@ -427,6 +451,6 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
