--- a/index.html
+++ b/index.html
@@ -370,23 +370,38 @@
           <form action="#" class="modal-form">
             <div class="modal-field">
               <label for="name" class="modal-input-text">Имя</label>
-              <input class="modal-input" type="text" name="name" id="name" required autofocus />
+              <div class="modal-input-wrap">
+                <input class="modal-input" type="text" name="name" id="name" required autofocus />
+                <svg class="modal-input-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
             </div>
             <div class="modal-field">
               <label for="tel" class="modal-input-text">Телефон</label>
-              <input
-                class="modal-input"
-                type="tel"
-                minlength="2"
-                name="tel"
-                id="tel"
-                required
-                autofocus
-              />
+              <div class="modal-input-wrap">
+                <input
+                  class="modal-input"
+                  type="tel"
+                  minlength="2"
+                  name="tel"
+                  id="tel"
+                  required
+                  autofocus
+                />
+                <svg class="modal-input-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
             </div>
             <div class="modal-field">
               <label for="mail" class="modal-input-text">Почта</label>
-              <input class="modal-input" type="email" name="mail" id="mail" required autofocus />
+              <div class="modal-input-wrap">
+                <input class="modal-input" type="email" name="mail" id="mail" required autofocus />
+                <svg class="modal-input-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
             </div>
             <div class="modal-field">
               <label for="comment" class="modal-input-text">Комментарий</label>
@@ -406,7 +421,7 @@
                 >Соглашаюсь с рассылкой и принимаю Условия договора</label
               >
             </div>
-            <button type="submit">Отправить</button>
+            <button type="submit" class="order-button modal-button">Отправить</button>
           </form>
         </div>
       </div>
@@ -467,8 +482,21 @@
             </li>
           </ul>
         </div>
+        <div class="footer-signup">
+          <p class="footer-join-title">Подпишитесь на рассылку</p>
+          <form action="#" class="signup-form">
+            <div class="signup-wrap">
+              <input type="mail" name="signup-mail" class="signup" placeholder="E-mail" required />
+              <button type="submit" class="signup-button order-button">
+                Подписаться<svg class="signup-button-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
