--- a/portfolio.html
+++ b/portfolio.html
@@ -318,6 +318,19 @@
             </li>
           </ul>
         </div>
+        <div class="footer-signup">
+          <p class="footer-join-title">Подпишитесь на рассылку</p>
+          <form action="#" class="signup-form">
+            <div class="signup-wrap">
+              <input type="mail" name="signup-mail" class="signup" placeholder="E-mail" required />
+              <button type="submit" class="signup-button order-button">
+                Подписаться<svg class="signup-button-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
