--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </div>
       </section>
 
-      <div class="backdrop" data-modal>
+      <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button type="button" data-modal-close class="modal-close">
             <svg class="close-icon" width="18" height="18">
