--- a/index.html
+++ b/index.html
@@ -380,15 +380,7 @@
             <div class="modal-field">
               <label for="tel" class="modal-input-text">Телефон</label>
               <div class="modal-input-wrap">
-                <input
-                  class="modal-input"
-                  type="tel"
-                  minlength="2"
-                  name="tel"
-                  id="tel"
-                  required
-                  autofocus
-                />
+                <input class="modal-input" type="tel" minlength="2" name="tel" id="tel" required />
                 <svg class="modal-input-icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
@@ -397,7 +389,7 @@
             <div class="modal-field">
               <label for="mail" class="modal-input-text">Почта</label>
               <div class="modal-input-wrap">
-                <input class="modal-input" type="email" name="mail" id="mail" required autofocus />
+                <input class="modal-input" type="email" name="mail" id="mail" required />
                 <svg class="modal-input-icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
@@ -420,7 +412,6 @@
                 id="modal-check"
                 value="Соглашаюсь с рассылкой и принимаю Условия договора"
                 required
-                autofocus
               />
               <label for="modal-check" class="modal-check-text"
                 ><span
@@ -495,7 +486,7 @@
           <p class="footer-join-title">Подпишитесь на рассылку</p>
           <form action="#" class="signup-form">
             <div class="signup-wrap">
-              <input type="mail" name="signup-mail" class="signup" placeholder="E-mail" required />
+              <input type="email" name="signup-mail" class="signup" placeholder="E-mail" required />
               <button type="submit" class="signup-button order-button">
                 Подписаться<svg class="signup-button-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-icon-send"></use>
