--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
           <p class="footer-join-title">Подпишитесь на рассылку</p>
           <form action="#" class="signup-form">
             <div class="signup-wrap">
-              <input type="mail" name="signup-mail" class="signup" placeholder="E-mail" required />
+              <input type="email" name="signup-mail" class="signup" placeholder="E-mail" required />
               <button type="submit" class="signup-button order-button">
                 Подписаться<svg class="signup-button-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-icon-send"></use>
