--- a/index.html
+++ b/index.html
@@ -358,73 +358,6 @@
           </ul>
         </div>
       </section>
-
-      <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-          <button type="button" data-modal-close class="modal-close">
-            <svg class="close-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-          </button>
-          <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-          <form action="#" class="modal-form">
-            <div class="modal-field">
-              <label for="name" class="modal-input-text">Имя</label>
-              <div class="modal-input-wrap">
-                <input class="modal-input" type="text" name="name" id="name" required autofocus />
-                <svg class="modal-input-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-field">
-              <label for="tel" class="modal-input-text">Телефон</label>
-              <div class="modal-input-wrap">
-                <input class="modal-input" type="tel" minlength="2" name="tel" id="tel" required />
-                <svg class="modal-input-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-field">
-              <label for="mail" class="modal-input-text">Почта</label>
-              <div class="modal-input-wrap">
-                <input class="modal-input" type="email" name="mail" id="mail" required />
-                <svg class="modal-input-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-field">
-              <label for="comment" class="modal-input-text">Комментарий</label>
-              <textarea
-                name="comment"
-                id="comment"
-                class="modal-comment"
-                placeholder="Введите текст"
-              ></textarea>
-            </div>
-            <div class="modal-field">
-              <input
-                class="modal-check visually-hidden"
-                type="checkbox"
-                name="policy"
-                id="modal-check"
-                value="Соглашаюсь с рассылкой и принимаю Условия договора"
-                required
-              />
-              <label for="modal-check" class="modal-check-text"
-                ><span
-                  ><svg class="icon-check" width="16" height="15">
-                    <use href="./images/icons.svg#icon-check"></use></svg></span
-                >Соглашаюсь с рассылкой и принимаю&nbsp;
-                <a href="" class="policy-link">Условия договора</a></label
-              >
-            </div>
-            <button type="submit" class="order-button modal-button">Отправить</button>
-          </form>
-        </div>
-      </div>
     </main>
 
     <footer class="footer">
@@ -497,6 +430,72 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" data-modal-close class="modal-close">
+          <svg class="close-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form action="#" class="modal-form">
+          <div class="modal-field">
+            <label for="name" class="modal-input-text">Имя</label>
+            <div class="modal-input-wrap">
+              <input class="modal-input" type="text" name="name" id="name" required autofocus />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="tel" class="modal-input-text">Телефон</label>
+            <div class="modal-input-wrap">
+              <input class="modal-input" type="tel" minlength="2" name="tel" id="tel" required />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="mail" class="modal-input-text">Почта</label>
+            <div class="modal-input-wrap">
+              <input class="modal-input" type="email" name="mail" id="mail" required />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field-comment">
+            <label for="comment" class="modal-input-text">Комментарий</label>
+            <textarea
+              name="comment"
+              id="comment"
+              class="modal-comment"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+          <div class="modal-field-check">
+            <input
+              class="modal-check visually-hidden"
+              type="checkbox"
+              name="policy"
+              id="modal-check"
+              value="Соглашаюсь с рассылкой и принимаю Условия договора"
+              required
+            />
+            <label for="modal-check" class="modal-check-text"
+              ><span
+                ><svg class="icon-check" width="16" height="15">
+                  <use href="./images/icons.svg#icon-check"></use></svg></span
+              >Соглашаюсь с рассылкой и принимаю&nbsp;
+              <a href="" class="policy-link">Условия договора</a></label
+            >
+          </div>
+          <button type="submit" class="order-button modal-button">Отправить</button>
+        </form>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
